# routes/web.php
@@ -21,3 +21,5 @@ Route::get('/', function () {
 Route::get('/api/getAllCURPS',[CurpController::class,"index"]);
 Route::post('/api/createCurp',[CurpController::class,"create"]);
 Route::put('/api/updateCurp',[CurpController::class,"update"]);
+Route::get('/api/getCurp/{curp}',[CurpController::class,"getCurp"]);
+Route::get('/api/getCurp/{curp}',[CurpController::class,"getCurp"]);
